hphp/hack/test/typecheck/goto/goto_label_redeclaration.php
<?hh // partial

function test(): void {
  L0:
  L1:
  L0:
  L2:
}
